# sys-speed

./: CHANGELOG.md  README.md  biome.json  index.html  install.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: publish.yml
scripts/: release.js  release.ts  update.js
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  tray.rs
src-tauri/src/plugins/: mod.rs  system_info.rs  window.rs
